# glottolog3

./: .gitignore  LICENSE  MANIFEST.in  Pipfile  Procfile  README.md  README.txt  RELEASING.md  alembic.ini  development.ini  fabfile.py  release.ini  requirements.txt  run.sh  serve.py  setup.cfg  setup.py  tox.ini
data/: README.txt  non_harald_refs.json  obsolete_refs.json
data/2.3/: README.txt
data/brugmann/: noderefs.py
data/glottologcurator/: revision1.py
glottolog3/: __init__.py  __main__.py  adapters.py  appconf.ini  assets.py  cli.py  cli_util.py  commands.py  config.py  datatables.py  desc_stats.py  initdb.py  interfaces.py  langdocstatus.py  maps.py  models.py  releases.ini  releases.py  static_archive.py  util.py  views.py
glottolog3/commands/: cdstar.py  create_archive.py  dbinit.py  download_sqldump.py  downloads.py  geo.py  load_sqldump.py  mark_new_languages.py  newick.py  sqldump.py
glottolog3/lib/: bibtex.py  latex.py  util.py
glottolog3/locale/: glottolog3.pot
glottolog3/scripts/: add_endangeredlanguages_url.py  add_ethnologue_data.py  add_languagelandscape_url.py  add_unesco_url.py  add_wikipedia_data.py  check_db_consistency.py  cleanup_jsondata.py  cleanup_obsolete_provider.py  cleanup_pages.py  compute_top_level_family.py  compute_tree_changes.py  compute_treefiles.py  create_downloads.py  desc_stats.py  fetch_downloads.py  fix_consistency.py  gbs.py  ia.py  import_refs.py  import_tree.py  initializedb.py  (+27 more)
migrations/: script.py.mako
tests/: conftest.py  development.ini  test_cli.py  test_functional.py  test_selenium.py  test_unit.py
(+206 files in other folders)
