[options.extras_require]
dev =
    flake8
    wheel
    twine
test =
    cdstarcat
    psycopg2-binary
    pytest
    pytest-clld>=0.4
    pytest-cov
    pytest-mock
    coverage>=4.2
    selenium
    webtest
    zope.component>=3.11.0

[tool:pytest]
filterwarnings =
    ignore::sqlalchemy.exc.SAWarning
testpaths = tests
addopts = --cov
markers =
    selenium: selenium UI tests

[coverage:run]
source = glottolog3

[coverage:report]
show_missing = true
skip_covered = true

[compile_catalog]
directory = glottolog3/locale
domain = clld
statistics = true

[extract_messages]
add_comments = TRANSLATORS:
output_file = glottolog3/locale/glottolog3.pot
width = 80

[init_catalog]
domain = clld
input_file = glottolog3/locale/glottolog3.pot
output_dir = glottolog3/locale

[update_catalog]
domain = clld
input_file = glottolog3/locale/glottolog3.pot
output_dir = glottolog3/locale
previous = true
